:tada: Organized and summarized some functions.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@google/clasp": "^2.4.1",
-    "@types/google-apps-script": "^1.0.47"
+    "@types/google-apps-script": "^1.0.47",
+    "node-html-parser": "^5.3.3"
   }
 }
