--- a/gas/LabCafe-shift/appsscript.json
+++ b/gas/LabCafe-shift/appsscript.json
@@ -1,7 +1,6 @@
 {
   "timeZone": "Asia/Tokyo",
-  "dependencies": {
-  },
+  "dependencies": {},
   "webapp": {
     "access": "ANYONE_ANONYMOUS",
     "executeAs": "USER_DEPLOYING"
